gobmkida/c3/is_ko_point
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/is_ko_point/src/engine/board.c:3052:6: error: use of undeclared identifier 'byte_9C688C'
v3 = byte_9C688C[pos]; 
     ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/is_ko_point/src/obj/1/board.o] Error 1
